--- a/index.html
+++ b/index.html
@@ -763,7 +763,7 @@
                         <li><a href="#about">About</a></li>
                     </ul>
                 </nav>
-                <button class="connect-btn">Connect Wallet</button>
+                <button class="interact-button">Connect Wallet</button>
             </div>
         </div>
     </header>
@@ -771,8 +771,8 @@
     <!-- Hero Section -->
     <section class="hero" id="home">
         <div class="container">
-            <div class="hero-content">
-                <div class="hero-text">
+            <div class="interact-button hero-content">
+                <div class="interact-button hero-text">
                     <h1>Claim Your <span>FREE $ENPP</span> Tokens Now!</h1>
                     <p>Join Elon Musk's political revolution with the ENPP Coin Airdrop. Get your share of 100,000,000 tokens fueling transparent governance and fiscal responsibility.</p>
                     <div class="hero-btns">
